--- a/README.adoc
+++ b/README.adoc
@@ -4,4 +4,5 @@
 
 Once upon a time a person named Git. Git had a lot of problems 
 in his life because of the difficulty for people to understand him and to speak with him.
-People prefered GitHub, his brother. 
+People prefered GitHub, his brother.
+But few people liked him, and knew how powerful he is. People begin to understand him and became very popular. Without git no one could live peacefully. 
